chore: Pacify SonarCloud